--- a/connectfour/views/splash.ejs
+++ b/connectfour/views/splash.ejs
@@ -4,6 +4,7 @@
     <title>Connect Four</title>
     <link rel="stylesheet" href="stylesheets/splash.css"/> 
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto+Mono&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/zof0mqp.css">
   </head>
   <body>
 
@@ -19,7 +20,7 @@
       <!--<h1 class="title">CONNECT FOUR</h1>-->
 
       <div class="new_game_btn">
-        <a href="/new_game" class="new_game">New Game</a> 
+        <a href="/play" class="new_game">New Game</a> 
       </div>
     </div>
    
