--- a/connectfour/public/stylesheets/game.css
+++ b/connectfour/public/stylesheets/game.css
@@ -28,12 +28,29 @@ body {
     /*align-self: flex-start;*/
 }
 
+.column:hover {
+    background-color: #696969;
+    border-radius: 4px;
+}
+
 .square {
     height: 50px;
     width: 50px;
     background-color: #ffffff;
-    margin-bottom: 20px;
     border-radius: 3px;
+}
+
+.sqrbck {
+    float: left;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.sqrbck:hover {
+    background-color: #474747;
+    border-radius: 4px;
 }
 
 .info {
@@ -45,11 +62,29 @@ body {
 
 .info #player {
     float: left;
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.info p {
+    margin-top: 10px;
+    font-family: 'Rift Soft';
+    font-size: 30pt;
+    color: white;
+    margin-bottom: 0px;
+    margin-left: 9px;
+    float: left;
 }
 
 .home_btn {
     width: 50px;
     height: 50px;
     float: right;
-    margin-right: 20px;
+    padding: 10px;
+}
+
+.home_btn:hover {
+    background-color: #474747;
+    border-radius: 4px;
 }
