--- a/connectfour/views/game.ejs
+++ b/connectfour/views/game.ejs
@@ -15,65 +15,66 @@
     <!-- GRID -->
     <div class="grid">
       <a href="/clicked/1" class="column" id="c1">
-        <div class="square" id="r6" ></div>
-        <div class="square" id="r5"></div>
-        <div class="square" id="r4"></div>
-        <div class="square" id="r3"></div>
-        <div class="square" id="r2"></div>
-        <div class="square" id="r1"></div>
+        <div class="sqrbck"><div class="square" id="r6" ></div></div>
+        <div class="sqrbck"><div class="square" id="r5"></div></div>
+        <div class="sqrbck"><div class="square" id="r4"></div></div>
+        <div class="sqrbck"><div class="square" id="r3"></div></div>
+        <div class="sqrbck"><div class="square" id="r2"></div></div>
+        <div class="sqrbck"><div class="square" id="r1"></div></div>
       </a>
       <a href="/clicked/2" class="column" id="c2">
-        <div class="square" id="r6"></div>
-        <div class="square" id="r5"></div>
-        <div class="square" id="r4"></div>
-        <div class="square" id="r3"></div>
-        <div class="square" id="r2"></div>
-        <div class="square" id="r1"></div>
+        <div class="sqrbck"><div class="square" id="r6"></div></div>
+        <div class="sqrbck"><div class="square" id="r5"></div></div>
+        <div class="sqrbck"><div class="square" id="r4"></div></div>
+        <div class="sqrbck"><div class="square" id="r3"></div></div>
+        <div class="sqrbck"><div class="square" id="r2"></div></div>
+        <div class="sqrbck"><div class="square" id="r1"></div></div>
       </a>
       <a href="/clicked/3" class="column" id="c3">
-        <div class="square" id="r6"></div>
-        <div class="square" id="r5"></div>
-        <div class="square" id="r4"></div>
-        <div class="square" id="r3"></div>
-        <div class="square" id="r2"></div>
-        <div class="square" id="r1"></div>
+        <div class="sqrbck"><div class="square" id="r6"></div></div>
+        <div class="sqrbck"><div class="square" id="r5"></div></div>
+        <div class="sqrbck"><div class="square" id="r4"></div></div>
+        <div class="sqrbck"><div class="square" id="r3"></div></div>
+        <div class="sqrbck"><div class="square" id="r2"></div></div>
+        <div class="sqrbck"><div class="square" id="r1"></div></div>
       </a>
       <a href="/clicked/4" class="column" id="c4">
-        <div class="square" id="r6"></div>
-        <div class="square" id="r5"></div>
-        <div class="square" id="r4"></div>
-        <div class="square" id="r3"></div>
-        <div class="square" id="r2"></div>
-        <div class="square" id="r1"></div>
+        <div class="sqrbck"><div class="square" id="r6"></div></div>
+        <div class="sqrbck"><div class="square" id="r5"></div></div>
+        <div class="sqrbck"><div class="square" id="r4"></div></div>
+        <div class="sqrbck"><div class="square" id="r3"></div></div>
+        <div class="sqrbck"><div class="square" id="r2"></div></div>
+        <div class="sqrbck"><div class="square" id="r1"></div></div>
       </a>
       <a href="/clicked/5" class="column" id="c5">
-        <div class="square" id="r6"></div>
-        <div class="square" id="r5"></div>
-        <div class="square" id="r4"></div>
-        <div class="square" id="r3"></div>
-        <div class="square" id="r2"></div>
-        <div class="square" id="r1"></div>
+        <div class="sqrbck"><div class="square" id="r6"></div></div>
+        <div class="sqrbck"><div class="square" id="r5"></div></div>
+        <div class="sqrbck"><div class="square" id="r4"></div></div>
+        <div class="sqrbck"><div class="square" id="r3"></div></div>
+        <div class="sqrbck"><div class="square" id="r2"></div></div>
+        <div class="sqrbck"><div class="square" id="r1"></div></div>
       </a>
       <a href="/clicked/6" class="column" id="c6">
-        <div class="square" id="r6"></div>
-        <div class="square" id="r5"></div>
-        <div class="square" id="r4"></div>
-        <div class="square" id="r3"></div>
-        <div class="square" id="r2"></div>
-        <div class="square" id="r1"></div>
+        <div class="sqrbck"><div class="square" id="r6"></div></div>
+        <div class="sqrbck"><div class="square" id="r5"></div></div>
+        <div class="sqrbck"><div class="square" id="r4"></div></div>
+        <div class="sqrbck"><div class="square" id="r3"></div></div>
+        <div class="sqrbck"><div class="square" id="r2"></div></div>
+        <div class="sqrbck"><div class="square" id="r1"></div></div>
       </a>
       <a href="/clicked/7" class="column" id="c7">
-        <div class="square" id="r6"></div>
-        <div class="square" id="r5"></div>
-        <div class="square" id="r4"></div>
-        <div class="square" id="r3"></div>
-        <div class="square" id="r2"></div>
-        <div class="square" id="r1"></div>
+        <div class="sqrbck"><div class="square" id="r6"></div></div>
+        <div class="sqrbck"><div class="square" id="r5"></div></div>
+        <div class="sqrbck"><div class="square" id="r4"></div></div>
+        <div class="sqrbck"><div class="square" id="r3"></div></div>
+        <div class="sqrbck"><div class="square" id="r2"></div></div>
+        <div class="sqrbck"><div class="square" id="r1"></div></div>
       </a>
     </div>
 
     <div class="info">
       <div class="square" id="player"></div>
+      <p>YOU</p>
       <a href="/home">
         <img src="images/home_btn.png" class="home_btn"></img>
       </a>
