css hover effects

--- a/connectfour/views/game.ejs
+++ b/connectfour/views/game.ejs
@@ -9,8 +9,10 @@
   <body>
 
     <div class="vertAlign">
-    <!-- Title -->
+    <!-- Title
     <h1 class="title">CONNECT FOUR</h1>
+    -->
+    <img class="logo" src="images/extended_logo.png">
 
     <!-- GRID -->
     <div class="grid">
