--- a/connectfour/views/splash.ejs
+++ b/connectfour/views/splash.ejs
@@ -9,9 +9,9 @@
   <body>
 
     <div class="stats">
-      <p>Players online:</p>
-      <p>Ongoing matches:</p>
-      <p>Games played:</p>
+      <p>Players online: <%= players %></p>
+      <p>Ongoing matches: <%= ongoing %></p>
+      <p>Games played: <%= total %></p>
     </div>
 
     <div class="centerCont">
@@ -20,7 +20,7 @@
       <!--<h1 class="title">CONNECT FOUR</h1>-->
 
       <div class="new_game_btn">
-        <a href="/play" class="new_game">New Game</a> 
+        <a href="/play" class="new_game">NEW GAME</a> 
       </div>
     </div>
    
