--- a/connectfour/public/stylesheets/game.css
+++ b/connectfour/public/stylesheets/game.css
@@ -1,7 +1,7 @@
 body {
     background-color: #282828;
 }
-
+/*
 .title {
     text-align: center;
     color: #ffffff;
@@ -10,6 +10,16 @@ body {
     font-size: 50pt;
     margin-bottom: 20px;
 }  
+*/
+.logo {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 0px;
+    margin-top: 0px;
+    max-width: 550px;
+    height: auto;
+}
 
 .vertAlign {
     /* TODO: center vertically */
@@ -69,7 +79,7 @@ body {
 
 .info p {
     margin-top: 10px;
-    font-family: 'Rift Soft';
+    font-family: 'Rift Soft', sans-serif;
     font-size: 30pt;
     color: white;
     margin-bottom: 0px;
