--- a/connectfour/public/stylesheets/splash.css
+++ b/connectfour/public/stylesheets/splash.css
@@ -35,8 +35,8 @@ body {
 .new_game {
     padding-top: 10px;
     padding-bottom: 10px;
-    padding-right: 20px;
-    padding-left: 20px;
+    padding-right: 25px;
+    padding-left: 25px;
     border-radius: 4px;
     border-style: solid;
     border-width: 3px;
@@ -44,8 +44,8 @@ body {
 
     color: #ffffff;
     font-style: normal; 
-    font-family: 'Rift Soft';
-    font-size: 40pt;
+    font-family: 'Roboto Mono';
+    font-size: 30pt;
     text-decoration: none;
 }
 
