--- a/connectfour/views/game.ejs
+++ b/connectfour/views/game.ejs
@@ -76,7 +76,8 @@
 
     <div class="info">
       <div class="square" id="player"></div>
-      <p>YOU</p>
+      <p id="you">YOU</p>
+      <p id="time">00:00</p>
       <a href="/home">
         <img src="images/home_btn.png" class="home_btn"></img>
       </a>
