--- a/connectfour/views/waiting.ejs
+++ b/connectfour/views/waiting.ejs
@@ -8,12 +8,13 @@
   <body>
 
     <div class="time">
-        <p>00:00</p>
+      <label id="minutes">00</label>:<label id="seconds">00</label>
     </div>
 
     <div class="info">
         <p>...Waiting for opponent...</p>
     </div>
    
+    <script src="javascripts/Timer.js"></script>
   </body>
 </html>
