--- a/connectfour/public/stylesheets/waiting.css
+++ b/connectfour/public/stylesheets/waiting.css
@@ -7,11 +7,7 @@ body {
     font-size: 100pt;
     color: white;
     text-align: center;
-}
-
-.time p {
-    margin-top: 15%;
-    margin-bottom: 0;
+    padding-top: 15%;
 }
 
 .info {
