no links in game

--- a/connectfour/views/splash.ejs
+++ b/connectfour/views/splash.ejs
@@ -20,7 +20,7 @@
       <!--<h1 class="title">CONNECT FOUR</h1>-->
 
       <div class="new_game_btn">
-        <a href="/play" class="new_game">NEW GAME</a> 
+        <a href="/newgame" class="new_game">NEW GAME</a> 
       </div>
     </div>
    
