--- a/connectfour/views/game.ejs
+++ b/connectfour/views/game.ejs
@@ -16,62 +16,62 @@
 
     <!-- GRID -->
     <div class="grid">
-      <a href="#" class="column" id="c0">
+      <div class="column" id="c0">
         <div class="sqrbck"><div class="square r5" ></div></div>
         <div class="sqrbck"><div class="square r4"></div></div>
         <div class="sqrbck"><div class="square r3"></div></div>
         <div class="sqrbck"><div class="square r2"></div></div>
         <div class="sqrbck"><div class="square r1"></div></div>
         <div class="sqrbck"><div class="square r0"></div></div>
-      </a>
-      <a href="#" class="column" id="c1">
+      </div>
+      <div class="column" id="c1">
         <div class="sqrbck"><div class="square r5" ></div></div>
         <div class="sqrbck"><div class="square r4"></div></div>
         <div class="sqrbck"><div class="square r3"></div></div>
         <div class="sqrbck"><div class="square r2"></div></div>
         <div class="sqrbck"><div class="square r1"></div></div>
         <div class="sqrbck"><div class="square r0"></div></div>
-      </a>
-      <a href="#" class="column" id="c2">
+      </div>
+      <div class="column" id="c2">
         <div class="sqrbck"><div class="square r5" ></div></div>
         <div class="sqrbck"><div class="square r4"></div></div>
         <div class="sqrbck"><div class="square r3"></div></div>
         <div class="sqrbck"><div class="square r2"></div></div>
         <div class="sqrbck"><div class="square r1"></div></div>
         <div class="sqrbck"><div class="square r0"></div></div>
-      </a>
-      <a href="#" class="column" id="c3">
+      </div>
+      <div class="column" id="c3">
         <div class="sqrbck"><div class="square r5" ></div></div>
         <div class="sqrbck"><div class="square r4"></div></div>
         <div class="sqrbck"><div class="square r3"></div></div>
         <div class="sqrbck"><div class="square r2"></div></div>
         <div class="sqrbck"><div class="square r1"></div></div>
         <div class="sqrbck"><div class="square r0"></div></div>
-      </a>
-      <a href="#" class="column" id="c4">
+      </div>
+      <div class="column" id="c4">
         <div class="sqrbck"><div class="square r5" ></div></div>
         <div class="sqrbck"><div class="square r4"></div></div>
         <div class="sqrbck"><div class="square r3"></div></div>
         <div class="sqrbck"><div class="square r2"></div></div>
         <div class="sqrbck"><div class="square r1"></div></div>
         <div class="sqrbck"><div class="square r0"></div></div>
-      </a>
-      <a href="#" class="column" id="c5">
+      </div>
+      <div class="column" id="c5">
         <div class="sqrbck"><div class="square r5" ></div></div>
         <div class="sqrbck"><div class="square r4"></div></div>
         <div class="sqrbck"><div class="square r3"></div></div>
         <div class="sqrbck"><div class="square r2"></div></div>
         <div class="sqrbck"><div class="square r1"></div></div>
         <div class="sqrbck"><div class="square r0"></div></div>
-      </a>
-      <a href="#" class="column" id="c6">
+      </div>
+      <div class="column" id="c6">
         <div class="sqrbck"><div class="square r5" ></div></div>
         <div class="sqrbck"><div class="square r4"></div></div>
         <div class="sqrbck"><div class="square r3"></div></div>
         <div class="sqrbck"><div class="square r2"></div></div>
         <div class="sqrbck"><div class="square r1"></div></div>
         <div class="sqrbck"><div class="square r0"></div></div>
-      </a>
+      </div>
     </div>
 
     <div class="info">
