--- a/connectfour/public/stylesheets/game.css
+++ b/connectfour/public/stylesheets/game.css
@@ -88,8 +88,7 @@ body {
     font-size: 30pt;
     color: white;
     margin-bottom: 0px;
-    margin-left: 200px;
-    float: left;
+    float: right;
     padding-right: 10px;
 }
 
