simple ws connection

--- a/connectfour/views/waiting.ejs
+++ b/connectfour/views/waiting.ejs
@@ -16,5 +16,6 @@
     </div>
    
     <script src="javascripts/Timer.js"></script>
+    <script src="javascripts/Connect.js"></script> 
   </body>
 </html>
