timer in game page

--- a/connectfour/views/game.ejs
+++ b/connectfour/views/game.ejs
@@ -81,11 +81,12 @@
       <a href="/home">
         <img src="images/home_btn.png" class="home_btn"></img>
       </a>
-      <p id="time">00:00</p>
+      <p id="time"><label id="minutes">00</label>:<label id="seconds">00</label></p>
     </div>
 
     </div>
 
     <script src="javascripts/Board.js"></script>
+    <script src="javascripts/Timer.js"></script>
   </body>
 </html>
