Add cookie identification

--- a/connectfour/views/game.ejs
+++ b/connectfour/views/game.ejs
@@ -86,6 +86,8 @@
 
     </div>
 
+    <script src="javascripts/Cookie.js"></script>
+    <script src="javascripts/Connect.js"></script>
     <script src="javascripts/Board.js"></script>
     <script src="javascripts/Timer.js"></script>
   </body>
