--- a/connectfour/views/waiting.ejs
+++ b/connectfour/views/waiting.ejs
@@ -16,6 +16,7 @@
     </div>
    
     <script src="javascripts/Timer.js"></script>
+    <script src="javascripts/Cookie.js"></script>
     <script src="javascripts/Connect.js"></script> 
   </body>
 </html>
