Add win execution, player leave notification

--- a/connectfour/views/game.ejs
+++ b/connectfour/views/game.ejs
@@ -75,7 +75,7 @@
     </div>
 
     <div class="info">
-      <div class="square" id="player"></div>
+      <div style="background-color: yellow;" class="square" id="player"></div>
       <p id="you">YOU</p>
       
       <a href="/home">
